--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.19",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.4.3",
     "vuejs-datepicker": "^1.6.2",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
